# free_dog_sdk_cpp

./: .gitignore  Readme.md
fdsc_utils/: CMakeLists.txt  package.xml
fdsc_utils/free_dog_sdk_py/free-dog-sdk/: README.md  example_positionlowlevel_eth.py  example_pushups_highlevel.py  example_rotate_90_highlevel.py  example_torquelowlevel_eth.py  example_velocitylowlevel_eth.py  example_walk_highlevel.py
fdsc_utils/free_dog_sdk_py/free-dog-sdk/ucl/: common.py  enums.py  highState.py  lowState.py  unitreeConnection.py
fdsc_utils/include/fdsc_utils/: color.hpp  common.hpp  complex.hpp  enums.hpp  free_dog_sdk_h.hpp  highCmd.hpp  highState.hpp  lowCmd.hpp  lowState.hpp  unitreeConnect.hpp  unitreeConnectBoost.hpp  unitreeConnectBoostAsyc.hpp
fdsc_utils/src/: common.cpp  exp_joint_position_control_lowlevel.cpp  exp_joint_torque_control_lowlevel.cpp  exp_joint_velocity_control_lowlevel.cpp  exp_pushups_highlevel.cpp  exp_rotate_90_highlevel.cpp  exp_walk_highlevel.cpp  highCmd.cpp  highState.cpp  lowCmd.cpp  lowState.cpp  unitreeConnectBoost.cpp
fdsc_utils/src/examples/: exp_joint_position_control_lowlevel.cpp  exp_joint_torque_control_lowlevel.cpp  exp_joint_torquetracking_control_lowlevel.cpp  exp_joint_velocity_control_lowlevel.cpp  exp_pushups_highlevel.cpp  exp_walk_highlevel.cpp
fdsc_utils/src/test/: test_boost_udp.cpp  test_common.cpp  test_udp.cpp
